<resources>
    <string name="app_name">ExpenseManager</string>
    <string name="fab_button_content_description">Add expense</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expense_name">Expense name</string>
    <string name="expense_name_hint">Expense Name</string>
    <string name="expense_value_input_hint">Amount</string>
    <string name="expense_date_input_hint">Date</string>
    <string name="expense_category_input_hint">Category</string>
    <string name="add_expense_button_label">Add Expense</string>
</resources>